--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 
     <ImageView
         android:id="@+id/icon_start"
-        android:layout_width="61sp"
+        android:layout_width="61dp"
         android:layout_height="0dp"
         android:src="@drawable/icon_cookw"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
@@ -35,8 +35,8 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_btn"
-        android:layout_width="180sp"
-        android:layout_height="60sp"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:layout_marginStart="16dp"
         android:backgroundTint="@color/white"
         android:text="@string/login_btn"
@@ -49,8 +49,8 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/registr_btn"
-        android:layout_width="180sp"
-        android:layout_height="60sp"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/red"
         android:text="@string/registr_btn"
