--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -23,13 +23,22 @@
             android:orientation="vertical">
 
             <!-- Media -->
-            <ImageView
-                android:id="@+id/img_view"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                />
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:strokeWidth="0dp"
+                app:cardElevation="0dp"
+                app:strokeColor="@color/stroke_color"
+                tools:ignore="MissingConstraints">
+                <ImageView
+                    android:id="@+id/img_view"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
+                    />
 
+            </com.google.android.material.card.MaterialCardView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,8 +52,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/recept_category"
                     android:textSize="15sp"
-                    android:layout_gravity="center"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
                     />
 
             </LinearLayout>
