--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -29,12 +29,13 @@
                 app:navigationIcon="@drawable/ic_baseline_menu"
                 app:menu="@menu/top_app_bar"
                 style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
-                android:background="@android:color/transparent"/>
+               />
 
         </com.google.android.material.appbar.AppBarLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginTop="55dp"
             android:orientation="vertical">
 
             <TextView
