add checkbox (finish)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,10 +103,11 @@
         tools:layout_editor_absoluteX="1dp">
 
         <CheckBox
-            android:id="@+id/chek_login"
+            android:id="@+id/chekLogin"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/remember_me"
+            android:onClick="saveLogin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
