--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,45 +14,46 @@
         <!-- Customize your theme here. -->
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+    <!-- Style textView: App name-->
+    <style name="text_view_title">
+        <item name="android:textSize">72sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
-    <style name="TextApp">
-        <item name="android:textSize">40sp</item>
-        <item name="android:fontFamily">@font/roboto</item>
+    <!-- Style textView: sub title-->
+    <style name="sub_title">
+        <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="TitleText">
         <item name="android:textSize">30sp</item>
-        <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="TitleTextHeader">
         <item name="android:textSize">16sp</item>
-        <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="TextBtnLightTheme">
-        <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="TitleTextMenu">
         <item name="android:textSize">20sp</item>
-        <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
     </style>
-
+    <!--
     <style name="Theme.Cookbook.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-    </style>
+    </style>-->
 
     <style name="Theme.Cookbook.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="Theme.Cookbook.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
